--- a/index.css
+++ b/index.css
@@ -1,4 +1,57 @@
-html, body {
-    margin: 0;
-    padding: 0;
+body {
+    margin: 5%;
+    font-family: 'Gill Sans', 'Gill Sans MT';
+    display: grid;
+    justify-content: center;
 }
+
+.title {
+    color: #16697A;
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+.entry-textbox {
+    background-color: #FFA62B;
+    width: 20em;
+    height: 10em;
+    padding: 1em;
+    margin-bottom: 0.5em;
+    border: unset;
+    border-radius: 25px;
+}
+
+.entry-textbox:focus {
+    outline: none;
+    box-shadow: 0px 0px 2px #000;
+}
+
+#entryForm .button {
+    border: unset;
+    border-radius: 25px;
+    padding: 5px 16px;
+    margin-left: 76%;
+}
+ 
+ #entries {
+     background: #16697A;
+     color: #EDE7E3;
+     font-family: cursive;
+     padding: 2em;
+     max-width: 20em;
+     border: unset;
+     border-radius: 25px;
+     margin-top: 1em;
+ }
+ 
+ .entries-nav {
+     padding-bottom: 1em;
+ }
+ 
+ .display-entry-button {
+     margin: 0.2em;
+ }
+ 
+ .display-entry-button:hover {
+     cursor: pointer;
+ }
